--- a/website/templates/backend/post/post/list.html
+++ b/website/templates/backend/post/post/list.html
@@ -53,7 +53,7 @@
                             </tr>
                         {% else %}
                             <tr>
-                                <td colspan=10" class="center">无数据</td>
+                                <td colspan=10 class="center">无数据</td>
                             </tr>
                         {% endfor %}
 
