--- a/website/templates/backend/template.html
+++ b/website/templates/backend/template.html
@@ -77,7 +77,7 @@ desired effect
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <span class="logo-mini"><b>Lite</b></span>
             <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg"><b>Lite</b>轻量生活</span>
+            <span class="logo-lg"><b>PKU</b>Forum</span>
         </a>
 
         <!-- Header Navbar -->
@@ -107,18 +107,11 @@ desired effect
 
                                 <p>
                                     {{ current_user.username }}
-                                    <small>Member since Nov. 2012</small>
                                 </p>
                             </li>
                             <!-- Menu Body -->
                             <li class="user-body">
                                 <div class="row">
-                                    <div class="col-xs-4 text-center">
-                                        <a href="#">Followers</a>
-                                    </div>
-                                    <div class="col-xs-4 text-center">
-                                        <a href="#">Sales</a>
-                                    </div>
                                     <div class="col-xs-4 text-center">
                                         <a href="#">Friends</a>
                                     </div>
@@ -152,11 +145,9 @@ desired effect
 
                 {% for item in g.menu %}
                     {% if permission(item.id) %}
-                        <li class="treeview {% if g.cur_menu and item.id == g.cur_menu[0]['parent_id'] %} active{% endif %}">
-                            <a href="{% set flag = True %}
-                                    {% for sitem in g.sub_menu %}
-                                    {% if permission(sitem.id) and flag and sitem.parent_id == item.id %}{{ sitem.uri }}
-                                    {% set flag = False %}{% endif %}{% endfor %}"><i class="fa fa-link"></i>
+                        <li class="treeview {% if g.cur_menu and item.id == g.cur_menu[0]['parent_id'] %} active {% endif %}">
+                            <a href="{{item.uri}}">
+                                <i class="fa fa-link"></i>
                                 <span>{{ item.name }}</span>
                                 <span class="pull-right-container">
                           <i class="fa fa-angle-left pull-right"></i>
