--- a/website/templates/backend/post/post/list.html
+++ b/website/templates/backend/post/post/list.html
@@ -41,13 +41,14 @@
                                 <td>{{ row.posted_at|datetime }}</td>
                                 <td>{{ row.updated_at|datetime }}</td>
                                 <td>
-                                    {% with url='backend.post_update_page', params={'id': row.id} %}
-                                        <a href="{{ url_for(url,**(params or {})) }}" type="button"
+                                    {% with url='backend.update_post_page', params={'id': row.id} %}
+                                        <a href="{{ url_for(url,**(params or {})) }}"
+                                           type="button"
                                            class="btn btn-info btn-sm"
                                            title="">编辑</a>
                                     {% endwith %}
-                                    <a type="button" class="btn btn-danger btn-sm" data-action="delete"
-                                       data-id="{{ row.id }}"
+                                    <a type="button" class="btn btn-danger btn-sm"
+                                       data-action="delete" data-id="{{ row.id }}"
                                        title="">删除</a>
                                 </td>
                             </tr>
