--- a/website/templates/backend/template.html
+++ b/website/templates/backend/template.html
@@ -7,7 +7,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>PyForum</title>
+    <title>PKUForum</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.6 -->
@@ -77,13 +77,13 @@ desired effect
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <span class="logo-mini"><b>Lite</b></span>
             <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg"><b>PKU</b>Forum</span>
+            <span class="logo-lg"><b>PKU</b> Forum</span>
         </a>
 
         <!-- Header Navbar -->
         <nav class="navbar navbar-static-top" role="navigation">
             <!-- Sidebar toggle button-->
-            <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+            <a class="sidebar-toggle" data-toggle="offcanvas" role="button">
                 <span class="sr-only">Toggle navigation</span>
             </a>
             <!-- Navbar Right Menu -->
@@ -92,7 +92,7 @@ desired effect
                     <!-- User Account Menu -->
                     <li class="dropdown user user-menu">
                         <!-- Menu Toggle Button -->
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown">
                             <!-- The user image in the navbar-->
                             <img src="{{ url_for('backend.static',filename='node_modules/admin-lte/dist/img/user2-160x160.jpg') }}"
                                  class="user-image" alt="User Image">
@@ -121,11 +121,14 @@ desired effect
                             <!-- Menu Footer-->
                             <li class="user-footer">
                                 <div class="pull-left">
-                                    <a href="#" class="btn btn-default btn-flat">Profile</a>
+                                    <a href="#" class="btn btn-default btn-flat">
+                                        Profile
+                                    </a>
                                 </div>
                                 <div class="pull-right">
-                                    <a href="{{ url_for('backend.logout') }}" class="btn btn-default btn-flat">Sign
-                                        out</a>
+                                    <a href="{{ url_for('backend.logout') }}" class="btn btn-default btn-flat">
+                                        Sign out
+                                    </a>
                                 </div>
                             </li>
                         </ul>
