--- a/website/templates/backend/post/list.html
+++ b/website/templates/backend/post/list.html
@@ -4,8 +4,9 @@
         <div class="col-md-12">
             <div class="box">
                 <div class="box-header with-border">
-                    {% with url='backend.create_post_page' %}{% include
-            'common/buttons/create_button.html' %}{% endwith %}
+                    {% with url='backend.create_post_page', params={'id': page_header['id']} %}
+                        {% include 'common/buttons/create_button.html' %}
+                    {% endwith %}
                 </div>
 
                 <!-- /.box-header -->
