--- a/website/templates/backend/common/buttons/go_back.html
+++ b/website/templates/backend/common/buttons/go_back.html
@@ -1,1 +1,3 @@
- <a href="javascript:history.back();" class="btn btn-default">Cancel</a>
+<a href="javascript:history.back();" class="btn btn-default">
+     取消
+</a>
