--- a/website/templates/backend/template.html
+++ b/website/templates/backend/template.html
@@ -174,7 +174,9 @@ desired effect
             <h1>
                 {{ page_header['title'] or '' }}
             </h1>
+            <i>
             {{ page_header['content'] or '' }}
+            </i>
         </section>
 
         <!-- Main content -->
@@ -191,10 +193,10 @@ desired effect
     <footer class="main-footer">
         <!-- To the right -->
         <div class="pull-right hidden-xs">
-            Product by walkerlee
+            Product by mly, zjh, and szq
         </div>
         <!-- Default to the left -->
-        <strong>Copyright &copy; 2016 <a href="#">Company</a>.</strong> All rights reserved.
+        <strong>Copyright &copy; 2019 <a href="#">PKU Forum</a>.</strong> All rights reserved.
     </footer>
 
     <!-- Add the sidebar's background. This div must be placed
