--- a/website/templates/backend/common/buttons/confirm.html
+++ b/website/templates/backend/common/buttons/confirm.html
@@ -1,4 +1,3 @@
-<button type="submit" class="btn btn-info" id="confirm"
-        data-action="{{ifelse(data.action == 'create', 'create', 'update')}}">
+<button type="submit" class="btn btn-info">
     确认
 </button>
