--- a/website/templates/backend/user/profile.html
+++ b/website/templates/backend/user/profile.html
@@ -24,7 +24,7 @@
                                 <td>{{ data.row.username }}</td>
                                 <td>{{ data.row.email }}</td>
                                 <td>{{ data.row.register_date|datetime }}</td>
-                                <td>{{ data.row.birthday }}</td>
+                                <td>{{ data.row.birthday|date }}</td>
                                 <td>{{ data.row.gender }}</td>
                                 <td>{{ data.row.level }}</td>
                                 <td>                                  
