--- a/website/templates/backend/user/profile_edit.html
+++ b/website/templates/backend/user/profile_edit.html
@@ -19,9 +19,9 @@
                         <input type="hidden" class="form-control" name="id" value="{{ data.row.id }}">
 
                         <div class="form-group">
-                            <label for="birthday" class="col-sm-2 control-label">生日</label>
+                            <label for="birthday" class="col-sm-2 control-label">生日 (格式:mm-dd-yyyy)</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="birthday" placeholder="生日" value="{{ data.row.birthday }}">
+                                <input type="text" class="form-control" name="birthday" placeholder="生日" value="{{ data.row.birthday|date }}">
                             </div>
                         </div>
                         
