--- a/website/templates/backend/post/list.html
+++ b/website/templates/backend/post/list.html
@@ -55,14 +55,14 @@
                                            title="">查看</a>
                                     {% endwith %}
                                     
-                                    {# TODO 只有作者和管理员才能编辑 #}                          
-                                    {% with url='backend.update_post_page', params={'id': row.id} %}
-                                        <a href="{{ url_for(url,**(params or {})) }}"
-                                           type="button"
-                                           class="btn btn-info btn-sm"
-                                           title="">编辑</a>
-                                    {% endwith %}                                    
-                                    
+                                    {% if page_header['current_user'] == row.user_id %}                       
+                                        {% with url='backend.update_post_page', params={'id': row.id} %}
+                                            <a href="{{ url_for(url,**(params or {})) }}"
+                                               type="button"
+                                               class="btn btn-info btn-sm"
+                                               title="">编辑</a>
+                                        {% endwith %}                                    
+                                    {% endif %}
                                 </td>
                             </tr>
                         {% else %}
