--- a/website/templates/backend/post/view.html
+++ b/website/templates/backend/post/view.html
@@ -84,13 +84,14 @@
                                 <td>{{ row.posted_at|datetime }}</td>
                                 <td>{{ row.updated_at|datetime }}</td>
                                 <td>                                  
-                                    {# TODO 只有作者和管理员才能编辑 #}                          
-                                    {% with url='backend.update_reply_page', params={'id': row.id} %}
-                                        <a href="{{ url_for(url,**(params or {})) }}"
-                                           type="button"
-                                           class="btn btn-info btn-sm"
-                                           title="">编辑</a>
-                                    {% endwith %} 
+                                    {% if page_header['current_user'] == row.user_id %}                         
+                                        {% with url='backend.update_reply_page', params={'id': row.id} %}
+                                            <a href="{{ url_for(url,**(params or {})) }}"
+                                               type="button"
+                                               class="btn btn-info btn-sm"
+                                               title="">编辑</a>
+                                        {% endwith %} 
+                                    {% endif %}
                                 </td>
                             </tr>
                         </tbody>
