--- a/website/templates/backend/user/profile.html
+++ b/website/templates/backend/user/profile.html
@@ -28,13 +28,14 @@
                                 <td>{{ data.row.gender }}</td>
                                 <td>{{ data.row.level }}</td>
                                 <td>                                  
-                                    {# TODO 只有作者和管理员才能编辑 #}                          
-                                    {% with url='backend.update_user_page', params={'id': data.row.id} %}
-                                        <a href="{{ url_for(url,**(params or {})) }}"
-                                           type="button"
-                                           class="btn btn-info btn-sm"
-                                           title="">编辑</a>
-                                    {% endwith %} 
+                                    {% if page_header['current_user'] == data.row.id %}                     
+                                        {% with url='backend.update_user_page', params={ 'id': data.row.id } %}
+                                            <a href="{{ url_for(url,**(params or {})) }}"
+                                               type="button"
+                                               class="btn btn-info btn-sm"
+                                               title="">编辑</a>
+                                        {% endwith %}
+                                    {% endif %}
                                 </td>
                             </tr>
                         </tbody>
