add delete function

--- a/website/templates/backend/post/view.html
+++ b/website/templates/backend/post/view.html
@@ -35,13 +35,11 @@
                                 <td>{{ page_header['posted_at']|datetime }}</td>
                                 <td>{{ page_header['updated_at']|datetime }}</td>
                                 <td>                                  
-                                    {# TODO 只有作者和管理员才能编辑 #}                          
-                                    {% with url='backend.update_post_page', params={'id': page_header['id']} %}
-                                        <a href="{{ url_for(url,**(params or {})) }}"
-                                           type="button"
-                                           class="btn btn-info btn-sm"
-                                           title="">编辑</a>
-                                    {% endwith %} 
+                                    {% if page_header['current_user'] == page_header['user_id'] %}                           
+                                        {% with url='backend.update_post_page', params={'id': page_header['id']} %}
+                                            {% include 'common/buttons/edit_button.html' %}
+                                        {% endwith %} 
+                                    {% endif %}
                                 </td>
                             </tr>
                         </tbody>
@@ -84,13 +82,13 @@
                                 <td>{{ row.posted_at|datetime }}</td>
                                 <td>{{ row.updated_at|datetime }}</td>
                                 <td>                                  
-                                    {% if page_header['current_user'] == row.user_id %}                         
+                                    {% if page_header['current_user'] == row.user_id %}
                                         {% with url='backend.update_reply_page', params={'id': row.id} %}
-                                            <a href="{{ url_for(url,**(params or {})) }}"
-                                               type="button"
-                                               class="btn btn-info btn-sm"
-                                               title="">编辑</a>
+                                            {% include 'common/buttons/edit_button.html' %}
                                         {% endwith %} 
+                                        {% with url='backend.delete_reply', params={'id': row.id} %}
+                                            {% include 'common/buttons/delete_button.html' %}
+                                        {% endwith %}
                                     {% endif %}
                                 </td>
                             </tr>
