--- a/website/templates/backend/post/list.html
+++ b/website/templates/backend/post/list.html
@@ -57,11 +57,11 @@
                                     
                                     {% if page_header['current_user'] == row.user_id %}                       
                                         {% with url='backend.update_post_page', params={'id': row.id} %}
-                                            <a href="{{ url_for(url,**(params or {})) }}"
-                                               type="button"
-                                               class="btn btn-info btn-sm"
-                                               title="">编辑</a>
-                                        {% endwith %}                                    
+                                            {% include 'common/buttons/edit_button.html' %}
+                                        {% endwith %}       
+                                        {% with url='backend.delete_post', params={'id': row.id} %}
+                                            {% include 'common/buttons/delete_button.html' %}
+                                        {% endwith %}
                                     {% endif %}
                                 </td>
                             </tr>
