--- a/website/templates/backend/user/profile.html
+++ b/website/templates/backend/user/profile.html
@@ -30,10 +30,7 @@
                                 <td>                                  
                                     {% if page_header['current_user'] == data.row.id %}                     
                                         {% with url='backend.update_user_page', params={ 'id': data.row.id } %}
-                                            <a href="{{ url_for(url,**(params or {})) }}"
-                                               type="button"
-                                               class="btn btn-info btn-sm"
-                                               title="">编辑</a>
+                                            {% include 'common/buttons/edit_button.html' %}
                                         {% endwith %}
                                     {% endif %}
                                 </td>
