--- a/website/templates/backend/common/buttons/delete_button.html
+++ b/website/templates/backend/common/buttons/delete_button.html
@@ -1,3 +1,3 @@
-<a type="button" class="btn btn-danger" href="{{ url_for(url, **(params or {})) }}"> 
+<a type="button" class="btn btn-danger btn-sm" href="{{ url_for(url, **(params or {})) }}"> 
     删除
 </a>
