--- a/website/templates/backend/common/buttons/go_back.html
+++ b/website/templates/backend/common/buttons/go_back.html
@@ -1,3 +1,3 @@
-<a href="javascript:history.back();" class="btn btn-default">
+<a href="javascript:history.back();" class="btn btn-default btn-sm">
      取消
 </a>
