--- a/website/templates/backend/post/list.html
+++ b/website/templates/backend/post/list.html
@@ -49,10 +49,7 @@
                                 <td>{{ row.updated_at|datetime }}</td>
                                 <td>
                                     {% with url='backend.view_post_page', params={'id': row.id} %}
-                                        <a href="{{ url_for(url,**(params or {})) }}"
-                                           type="button"
-                                           class="btn btn-info btn-sm"
-                                           title="">查看</a>
+                                        {% include 'common/buttons/view_button.html' %}
                                     {% endwith %}
                                     
                                     {% if page_header['current_user'] == row.user_id or page_header['role'] == 256%}                       
