--- a/website/templates/backend/user/profile.html
+++ b/website/templates/backend/user/profile.html
@@ -1,5 +1,13 @@
 {% extends 'template.html' %}
 {% block body %}
+    {% if page_header['role'] == 256%} 
+        {% with url='backend.create_user_page', params={} %}
+            <a href="{{ url_for(url, **(params or {})) }}" class="btn btn-success">
+                创建新用户
+            </a>
+        {% endwith %}
+    {% endif %}
+
     <div class="row">
         <div class="col-md-12">
             <div class="box">
@@ -45,14 +53,65 @@
                 </div>
             </div>
         </div>
+    
+        <h3> 最近发帖 </h3>
+            
+        <!-- /.以下是原帖 -->
+        <div class="box-body">
+            {% for post in data.rows %}
+            <div class="panel panel-default">
+            <div class="panel-heading">
+            <table class="table table-bordered">
+                <tbody>                        
+                    <tr>
+                        <th class="col-sm-1 sorttable-nosort">
+                            楼数
+                        </th>
+                        <th class="col-sm-1 sorttable-nosort">帖子ID</th>
+                        <th class="col-sm-1 sorttable-nosort">帖子标题</th>
+                        <th class="col-sm-1 sorttable-nosort">点赞数</th>
+                        <th class="col-sm-1 sorttable-nosort">发帖时间</th>
+                        <th class="col-sm-1 sorttable-nosort">更新时间</th>
+                        <th class="col-sm-2 sorttable-nosort">操作</th>
+                    </tr>                        
+                    <tr data-id="{{ post.id }}" class="icon-tr">
+                        <td>{{ post.comment_floor }}</td>
+                        <td>{{ post.id }}</td>
+                        <td>{{ post.title }}</td>
+                        <td>{{ post.like_count }}</td>
+                        <td>{{ post.posted_at|datetime }}</td>
+                        <td>{{ post.updated_at|datetime }}</td>
+                        <td>
+                            {% with url='backend.view_post_page', params={'id': post.id} %}
+                                {% include 'common/buttons/view_button.html' %}
+                            {% endwith %}
+
+                            {% if page_header['current_user'] == post.user_id or page_header['role'] == 256%}                       
+                                {% with url='backend.update_post_page', params={'id': post.id} %}
+                                    {% include 'common/buttons/edit_button.html' %}
+                                {% endwith %}       
+                                {% with url='backend.delete_post', params={'id': post.id} %}
+                                    {% include 'common/buttons/delete_button.html' %}
+                                {% endwith %}
+                            {% endif %}
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            </div>
+            <div class="panel-body">{{ post.content|safe }}</div>
+            </div>
+            {% else %}
+            <table class="table table-bordered">
+                <tbody>
+                    <tr>
+                        <td colspan=10 class="center">无最近发帖</td>
+                    </tr>
+                </tbody>
+            </table>
+            {% endfor %}
+        </div>
     </div>
-    {% if page_header['role'] == 256%} 
-        {% with url='backend.create_user_page', params={} %}
-            <a href="{{ url_for(url, **(params or {})) }}" class="btn btn-success">
-                创建新用户
-            </a>
-        {% endwith %}
-    {% endif %}
 {% endblock %}
 
 {% block script %}
