--- a/website/templates/backend/user/profile_edit.html
+++ b/website/templates/backend/user/profile_edit.html
@@ -21,7 +21,8 @@
                         <div class="form-group">
                             <label for="birthday" class="col-sm-2 control-label">生日 (格式:mm-dd-yyyy)</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="birthday" placeholder="生日" value="{{ data.row.birthday|date }}">
+                                <input type="text" class="form-control" name="birthday" 
+                                       placeholder="生日" value="{{ data.row.birthday|date }}">
                             </div>
                         </div>
                         
