--- a/website/templates/backend/post/list.html
+++ b/website/templates/backend/post/list.html
@@ -13,7 +13,7 @@
                         {% endwith %}
                     {% endif %}
                 </div>
-
+                <div class="animated fadeInUp">
                 <!-- /.box-header -->
                 <div class="box-body">
                     <table class="table table-bordered">
@@ -78,6 +78,7 @@
                 </div>
                 <div class="box-footer clearfix ">
                     {{ paginate.links }}
+                </div>
                 </div>
             </div>
         </div>
