--- a/website/templates/backend/module/module_mostPopular_post.html
+++ b/website/templates/backend/module/module_mostPopular_post.html
@@ -60,20 +60,27 @@
 
                 <!-- /.box-header -->
                 <div class="box-body" style="text-align:left">
+                    <h3> 回复此贴的用户 </h3>
                     <table class="table table-bordered">
                         <tbody>
                         <tr>
-                            <th class="col-sm-1 sorttable-nosort">回复此贴的用户</th>
+                            <th class="col-sm-1 sorttable-nosort">用户ID</th>
+                            <th class="col-sm-1 sorttable-nosort">用户昵称</th>
+                            <th class="col-sm-1 sorttable-nosort">性别</th>
+                            <th class="col-sm-1 sorttable-nosort">等级</th>
                         </tr>
                         {% for row in rows %}
                             <tr data-id="{{ row.id }}" class="icon-tr">
+                                <td>{{ row.id }}</td>
                                 <td>
                                 {% with url='backend.user_profile_page', params={'id': row.id} %}
                                 <a href="{{ url_for(url, **(params or {})) }}">
                                     {{ page_header['user_dict'][row.id] }}
                                 </a>
                                 {% endwith %}
-                                </td>                                                             
+                                </td>
+                                <td>{{ row.gender }}</td>
+                                <td>{{ row.level }}</td>                                                             
                             </tr>
                         {% else %}
                             <tr>
